modif app,data,index

--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 <head>
 	<meta charset="UTF-8">
 	<title>chalenge1</title>
-</head>
+</head>	
 <body>
-	
-<body>
-    <div id="Div_XML"></div>
-</body>            
-            
-	<script type="app.js"></script>
+
+	<div id="Div_XML">
+		<form>
+			<select class="choix" name="choix">       
+				<option value = "nomclient">Choississez un client</option>
+				
+			</select>
+		</form>
+	</div>
+	<div id="receiver">
+
+		
+	</div>
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>        
+	<script type="text/javascript" src ="app.js"></script>
 </body>
 </html>
