--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<div id="Div_XML">
 		<form>
-			<select class="choix" name="choix">       
+			<select class="choix" >       
 				<option value = "nomclient">Choississez un client</option>
 				
 			</select>
